# student-growth-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
migrations/: env.py
migrations/versions/: 2e450ed98378_init_schema_bigint_v3.py
src/: main.py
src/ai/: models.py
src/core/: config.py  database.py  models.py
src/goals/: models.py
src/users/: models.py  routers.py  schemas.py  service.py
