[project]
name = "student-growth-backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Dongyu Lan", email = "dongyu.lan@duke.edu" }
]
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]

[build-system]
requires       = ["poetry-core>=2.0.0,<3.0.0"]
build-backend  = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black  = "^25.1.0"
isort  = "^6.0.1"
flake8 = "^7.2.0"
